# altgrad

./: .gitignore  RUNPOD.md  TEST_MATRIX.md  pyproject.toml  requirements.txt
.planning/: MILESTONES.md  PROJECT.md  REMEDIATION.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  v1-MILESTONE-AUDIT.md
.planning/milestones/: v1-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
altgrad/: __init__.py
altgrad/analysis/: __init__.py  comparisons.py  data_loader.py  failure_analysis.py  report_generator.py  results_table.py
altgrad/integration/: __init__.py  config.py  surgery.py  wrapper.py
altgrad/quantization/: __init__.py  advanced_diagnostics.py  diagnostics.py  flip_metrics.py  formats.py  ops.py  rank_health.py  scaling.py  stability.py
altgrad/training/: __init__.py  callbacks.py  checkpoint.py  classification_data.py  classification_metrics.py  classification_trainer.py  classifier.py  config.py  data.py  format_runner.py  metrics.py  model.py  optimizer.py  shadow.py  trainer.py
altgrad/utils/: __init__.py  reproducibility.py
docs/: ANALYSIS_MATRIX.md  NORTH_STAR.md
experiments/: run_classification.py  run_experiment.py
experiments/configs/: bf16_baseline.yaml  e0m7_uniform.yaml  e1m6_uniform.yaml  e3m4_uniform.yaml  e5m2_fp8.yaml  e5m2_manifold.yaml  e5m2_short.yaml  e5m2_standard.yaml  (+1 more)
reports/: failure_modes.md  format_comparison.md  manifold_comparison.md
scripts/: generate_reports.py
tests/: test_advanced_diagnostics.py  test_data.py  test_diagnostics.py  test_flip_metrics.py  test_formats.py  test_integration.py  test_model.py  test_ops.py  test_optimizer.py  test_rank_health.py  test_reproducibility.py  test_scaling.py  test_stability.py  test_training_infra.py
(+71 files in other folders)
