[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "altgrad"
version = "0.1.0"
description = "Alternative gradient quantization research library"
requires-python = ">=3.10"
dependencies = [
    "wandb>=0.15.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "tabulate>=0.9.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
analysis = [
    "wandb>=0.15.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "tabulate>=0.9.0",
    "scipy>=1.10.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.setuptools.packages.find]
where = ["."]
include = ["altgrad*"]
